16;40 15;07